# fast-explorer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.rs  metrics.rs  reporter.rs  scanner.rs  symlink.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs  watcher.rs
src-tauri/src/api/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/scanner/: worker.rs
src-tauri/src/search/: mod.rs
src-tauri/src/telemetry/: metrics.rs  mod.rs
src/components/: FileIcon.tsx  ResultList.tsx  StatusBar.tsx
src/platform/: fallback.rs  macos.rs  mod.rs
src/scanner/: mod.rs  worker.rs
