[package]
name = "fast-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
num_cpus   = "1"
async-channel = "2"
dashmap    = "6"           # sharded concurrent set — replaces Mutex<HashSet>
tokio-util = { version = "0.7" }   # CancellationToken
libc       = "0.2"         # raw getdirentries64 syscall (macOS fast path)

[profile.release]
opt-level     = 3
lto           = "thin"     # link-time optimisation — measurable on hot loops
codegen-units = 1          # single CGU = better inlining across modules
strip         = "symbols"  # smaller binary, faster load
