[package]
name = "fast-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
num_cpus   = "1"
async-channel = "2"
dashmap    = "6"
tokio-util = { version = "0.7" }
libc       = "0.2"
compact_str = "0.8"  # inline storage for strings ≤24 bytes
rusqlite   = { version = "0.31", features = ["bundled"] } # SQLite index engine
notify     = "6.1"   # Live filesystem events (FSEvents/inotify)
clap       = { version = "4.5", features = ["derive"] } # CLI parser
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nucleo = "0.2.1" # Elite fuzzy matching engine
tauri = { version = "1.6", features = [ "window-all", "shell-open", "clipboard-write-text", "macos-private-api"] }
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level     = 3
lto           = "thin"     # link-time optimisation — measurable on hot loops
codegen-units = 1          # single CGU = better inlining across modules
strip         = "symbols"  # smaller binary, faster load
